# graphrag_project

./: README.md  load_parquet.ipynb  pyproject.toml
rag_ollama/: settings.yaml
rag_ollama/output/: logs.json  stats.json
ragtest/output/: create_base_entity_graph.parquet  create_base_extracted_entities.parquet  create_final_communities.parquet  create_final_community_reports.parquet  create_final_entities.parquet  create_final_nodes.parquet  create_final_relationships.parquet  create_final_text_units.parquet  create_summarized_entities.parquet  logs.json  stats.json
