[tool.poetry]
name = "graphrag-project"
version = "0.1.0"
description = ""
authors = ["Andre Wiradarma <awiradarma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
graphrag = "^0.3.6"
jupyter = "^1.1.1"
pandas = "^2.2.3"
neo4j = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
